--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <div class="hero">
     <header>
         <div id="navi" class="container">
-            <h1>JoAnne`s Store</h1>
+            <h1>Jo Salmon Art</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -25,23 +25,23 @@
     <main>
         <section>
             <div class="container">
-                <h2>Welcome to my Merch Store</h2>
-                <p>Get the coolest merch and show your style!</p>
+                <h2>Welcome</h2>
+                <p></p>
             </div>
         </section>
     </div>
 
         <section class="products">
-            <div class="container">
+            <div class="container1">
                 <h2>Featured Products</h2>
-                <div class="product">
+                <div class="product1">
                     <img src="../assets/image/joan.jpg" alt="Product 1">
                     <h3>Product 1</h3>
                     <p>$19.99</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="product">
-                    <img src="product2.jpg" alt="Product 2">
+                <div class="product2">
+                    <img src="../assets/image/joan.jpg" alt="Product 2">
                     <h3>Product 2</h3>
                     <p>$24.99</p>
                     <button>Add to Cart</button>
